--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   app:
     build:
       context: .
-    container_name: fastapi_app
+    container_name: taipei-day-trip
     ports:
       - "8000:8000"
     env_file:
